# bootanim_custom

./: .gitignore  .gitmodules  CMakeLists.txt  Cmake.in  Dockerfile  readme.md  sh2.cmake
.devcontainer/: devcontainer.json
bl/: CMakeLists.txt  crt0_bl.s  main.c
bl/fastlz/: fastlz.c
bl/quicklz/: quicklz.h
src/: CMakeLists.txt  bios_cd.c  bios_cd.h  boot.c  boot.h  comp.ld  main.c  sega.h  vdpregs.h
tools/: CMakeLists.txt  compress_file.c  fastlz.main.c
